Mobile Hero Fix
Fixing the mobile hero section so that it doesn't overlap with the navbar on iphone.

--- a/startdev/src/Hero/Hero.css
+++ b/startdev/src/Hero/Hero.css
@@ -21,7 +21,7 @@
     position: relative;
     height: 35vh;
     width: 100%;
-    margin: 0;
+    margin: 15px 0 0 0;
     display: flex;
     /* align-items: center; */
     justify-content: center;
@@ -47,6 +47,7 @@
 
     display: flex;
     flex-direction: column;
+    margin: 15px 0 0 0;
     /* margin: 10px 0; */
     float: left;
     /* align-items: center; */
